# dfm-hackathon

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile.railway  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
.claude/planning/26-06-28-dashboard-composer-agent/: context.md  plan.md  task-1.md  task-2.md  task-3.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  llm.py
backend/app/db/: session.py
backend/app/domains/chat/: router.py  schemas.py  service.py
backend/app/domains/dashboard/: agent.py  analytics.py  artifacts.py  catalog.py  chat_agent.py  chat_service.py  chat_stream.py  deterministic_chat.py  router.py  sample_data.py  schemas.py  service.py  tools.py
backend/app/domains/data_quality/: ETL.py  agent.py  models.py  prompt.md  router.py  schemas.py  service.py  tools.py
backend/app/domains/files/: router.py  schemas.py  service.py
backend/app/domains/health_gaps/: router.py  schemas.py  service.py
backend/app/domains/insights/: router.py  schemas.py  service.py
backend/app/domains/projects/: router.py  schemas.py  service.py
backend/app/shared/: schemas.py  supabase_client.py
backend/dfm_me_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: parse_data.py
data/projects/mafy/: CR_DATA_2026-06-27 (1).xlsx  CR_DATA_2026-06-27.xlsx  REGISTRE_CONSULTATION_REACT()_2026-06-27.xlsx  SENSIBILISATION_AC_MAFY-2026-06-27 (1).xlsx  (+3 more)
frontend/: .env.example  package-lock.json  package.json
outputs/: hazava-ai-hackathon-pitch.pptx  hazava-ai-hackathon-pitch.pptx.inspect.ndjson
src/app/: globals.css  page.tsx
src/lib/: projects.ts
supabase/: README.md  schema.sql
(+79 files in other folders)
