[project]
name = "dfm-me-assistant-backend"
version = "0.1.0"
description = "Backend for the Doctors for Madagascar M&E Data Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # LLM (optional at runtime — lazily imported in app/core/llm.py).
    # Anthropic Claude is the default provider; swap via env vars.
    # "langchain>=0.3",
    # "langchain-anthropic>=0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
