[project]
name = "dfm-me-assistant-backend"
version = "0.1.0"
description = "Backend for the Doctors for Madagascar M&E Data Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # Agent stack (OpenAI via LangChain, orchestrated with LangGraph).
    # Imported lazily in app/core/llm.py and app/domains/dashboard/agent.py
    # so the app still imports/runs before these are installed.
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
